# meterapi

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: db-structure.md
src/meterapi/: __init__.py  config.py  db.py  enums.py
src/meterapi/app/: _responses.py  _time.py  dependencies.py  errors.py  main.py
src/meterapi/app/routers/: complexes.py  connections.py  health.py  measurements.py  meters.py  security.py
src/meterapi/cli/: db.py  main.py
src/meterapi/db/: __init__.py  repository.py  session.py
src/meterapi/db/mixins/: base.py  complexes.py  connections.py  measurements.py  meters.py  rooms.py
src/meterapi/models/: __init__.py  api.py  creds.py  db.py
src/meterapi/services/: dbservice.py
tests/: _seed.py  conftest.py  test_api_models.py  test_credentials.py  test_errors.py  test_health_ready.py  test_mixins.py  test_repository_base.py  test_routers.py  test_routes.py  test_time.py
