[project]
name = "meterapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Niels Ota", email = "ota.niels@bcg.com" }
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.14",
    "fastapi>=0.136.3",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.38",
    "typer>=0.25.1",
]

[project.scripts]
meterapi = "meterapi.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "httpx>=0.27",
    "moto[secretsmanager]>=5",
]

[tool.pytest.ini_options]
addopts = "--strict-markers -q"
testpaths = ["tests"]
markers = [
    "postgres: integration tests requiring a Postgres container (skipped when unavailable)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
